# AlumniGallery

./: forms.py  main.py  models.py  pyproject.toml  test.db
static/: gallery.css  job.css  login.css
templates/: gallery.html  index.html  job.html  login.html  signup.html
