[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.1.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-JWT = "^0.3.2"
Flask-Login = "^0.6.0"
Flask-WTF = "^1.0.1"
WTForms = "^3.0.1"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"